--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,10 @@ moviepy
 beautifulsoup4
 Pillow
 groq
-openai-whisper
+torch>=2
+torchaudio>=2
+faster-whisper==1.0.0
+transformers
+pandas
+setuptools>=65
+nltk
